<resources>
    <string name="app_name">Submission Jetapack Compose</string>
    <string name="home">Home</string>
    <string name="about">About</string>

    <string name="aspyer">Aspyer</string>
    <string name="blinders">Blinders</string>
    <string name="brooks">Brooks</string>
    <string name="dubvision">DubVision</string>
    <string name="julianjordan">Julian Jordan</string>
    <string name="martingarrix">Martin Garrix</string>
    <string name="matisseandsadko">Matisse Sadko</string>
    <string name="mesto">Mesto</string>
    <string name="thirdparty">Third Party</string>
    <string name="threelau">Three Lau</string>
    <string name="tvnoise">TV Noise</string>
    <string name="back">Kembali</string>
    <string name="description">Description</string>

    <string name="aspyer_place">Russia</string>
    <string name="blinders_place">Poland</string>
    <string name="brooks_place">Netherlands</string>
    <string name="dubvision_place">Netherlands</string>
    <string name="julianjordan_place">Netherlands</string>
    <string name="martingarrix_place">Netherlands</string>
    <string name="matisseandsadko_place">Russia</string>
    <string name="mesto_place">Netherlands</string>
    <string name="thirdparty_place">United Kingdom</string>
    <string name="threelau_place">United States</string>
    <string name="tvnoise_place">Netherlands</string>

    <string name="aspyer_desc">
        ASPYER is an Electronic Dance Music Producer from Russia. STMPD regular Aspyer is blessing everyone with a new release. For ‘Nobody’ he used the voices from the popular pop group Ni/Co. Slightly steering away from his previous releases, he took a more minimalistic approach when working on this new track. He found the perfect match with the voices from Los Angeles based pop group Ni/Co, mainly known from their presence on YouTube, who created the lyrics and topline.
    </string>
    <string name="blinders_desc">
        In spite of the plural form, Blinders is one man standing behind many unique club tracks with millions of views and streams on all music platforms. Listeners can easily recognise Blinders’ original sound by the sharp synthesised leads, usually inspired by real instruments. The constant delivery of quality music, made Blinders’ name widely recognisable and it caught attention of a number of top DJs and producers.The award for his hard work were collaborations with Martin Garrix, Afrojack and remixes for David Guetta, Showtek, R3hab (…), which are still played in the DJ sets and are looping in party playlists.Blinders’ production skills were discovered by Axwell in the remix of his own track “Center Of The Universe”, which the young Pole made in 2013. After the official release of the remix on Axtone, Blinders career took off. A year later “Sirene” was released on Nicky Romero’s Protocol Recordings. The track was massively supported by DJs from all over the world and Blinders became a significant name in the EDM community. A new chapter in the musical adventure started, when Blinders signed with Martin Garrix`s STMPD RCRDS. Since then he kept surprising his audience with innovative ideas and sounds which can be heard in tracks like “Leaving”, “Snakecharmer” or “Okami”. Being named as one of the top Polish DJs, Blinders regularly represents his country on stages of major festivals and at prestigious clubs such as Tomorrowland, Parookaville, Ushuaia and many more.
    </string>
    <string name="brooks_desc">
        Thijs Westbroek, better known by his stage name Brooks, is a Dutch DJ, producer and electronic musician from Eindhoven. He is best known for his collaborations with Martin Garrix such as "Byte", "Boomerang" and "Like I Do". Brooks` career as a DJ began to progress when he sent his song to twenty random email addresses that could be related to Martin Garrix. To his delight, the song he sent was played by Garrix at a show. Soon after, Garrix contacted and told Brooks of his enthusiasm with his music. Garrix later invited him to his house to work on the "Byte" song. Brooks described the event as a "crazy story" but told he was lucky. In October 2017, he released the single "Boomerang" with Garrix, who used the alias GRX. On 22 February 2018, Brooks collaborated with Garrix and David Guetta to release "Like I Do" as a single It was released via What A Music, Big Beat, Atlantic and Parlophone. In 2018, Brooks was nominated for a prize by SLAM! named "Best Talent 2018"
    </string>
    <string name="dubvision_desc">
        DubVision, based in the Netherlands, is an upcoming producer/ dj duo. Providing dancefloors with energetic tunes, DubVision seems to be a big promise for the future. Dubvision consist of two Dutch brothers, Victor Volt and Stephen Noque. Their passion for music has led to great tracks, getting a lot of support at the moment. They are known for their uplifting melodies and big beats. With a style variating from progressive, tech-house to sweet house tunes, the duo covers a wide dance floor market. Remember the name, cause you`ll be hearing it a lot.
    </string>
    <string name="julianjordan_desc">
        From one-to-watch to leader of the pack. Not beholden to tired formulas or following the latest trend, he instead paves his own way with innovative rhythms and inventive productions known for his high energy. Signed to STMPD since 2019, he first released Glitch, his third collaboration with Martin Garrix, ‘Bassline’ and ‘Next Level’, a perfect depiction of how Julian mastered the craft of producing cutting-edged bangers. With a nomination for Best Dutch Act at the MTV EMAs and joining the likes of Garrix and Calvin Harris in holding a monthly residency at Las Vegas’ prestigious Omnia, he`s certainly earned his status as a sought-after DJ. Julian`s commitment to energetic and cutting-edge shows has made him a regular at world-leading festivals like Tomorrowland, Creamfields, Ultra Miami and Sziget. The successful projects, record number of releases and his track ‘Oldskool’ staying number 1 on Beatport’s top 100 Electro House for 10 weeks, made 2019 a year that’s hard to beat. But Julian Jordan had even more in stock for 2020! Releasing ‘Oh Lord’ ft. Daijo and high energetic tracks like ‘Without You’, `Badboy`, and `Boss` all securing the number 1 spot on Beatport’s top 100 Electro House for weeks, Julian has definitely set the tone! 2020 also saw him claim the first place on Beatport’s Top 100 Electro House artists 2020, and #71 on this years DJ Mag top 100 proving that very few can still resist Jordan.
    </string>
    <string name="martingarrix_desc">
        Martijn Gerard Garritsen, born on May 14, 1996, is a Dutch musician and producer from Amstelveen. He was named the DJ Mag top DJ worldwide for 2016 and 2017. He has also had several high-profile artists` residencies, including at Hï Ibiza and OMNIA Nightclub. In 2012, Garritsen signed a professional contract with Spinnin` Records until terminating his contract in 2015 and cutting ties with his management, MusicalAllStars on August 25, 2015. In a subsequent lawsuit against the record company, Garritsen won back his rights to his songs released under the label between 2012 and 2015, winning his case in a 2017 court ruling. Earlier in 2016, Martijn created his label imprint `STMPD RCRDS`, which was a tribute to his father`s role in the stamp business. On July 26, 2016, Garritsen signed a `worldwide` contract with Sony Music International. Explaining that, "their forward thinking approach to streaming and incredible roster of talented artists combined with their passion and understanding for my vision of the future of my music made this a no brainer."
    </string>
    <string name="matissesadko_desc">
        Russian house duo Matisse and Sadko definitely have a thing for Sweden. These big boys shook the world with their ZOUK debut a few months back, unfolding a strong peak-time anthem with `Hi Scandinavia!`. Now that they`ve had their grand entrance, it`s time to kick it some more. So that`s exactly what they`re doing with `Svenska`. With `Svenska`, the guys don`t only get the blonde Svenska flickor dancing, but also move everyone else in the global dance society. Riding the same intensity and energetic flow, it kicks in with a new dose of feel-good.
    </string>
    <string name="mesto_desc">
        There are 3 musical groups that use the name "Mesto". 1. EDM producer from Netherlands. 2. Mesto is a group of friends from Wilmington, North Carolina. They make sweet jams. 3. MESTO was established to combine the traditions of many ethnic musical genres and those of Western classical traditions. Los Angeles lends itself as one of the most logical choices of cities to host this unique orchestra. Speaking from a musical perspective, MESTO focuses on fostering new genres of musical expressions that combine the essence of non-European traditions; namely, styles of music based on ethnic scales and rhythms. The makeup of MESTO is within the scope of usual Western norms. Traditional ethnic (folk) instruments are incorporated with the symphony orchestra. Precedence for such arrangements has occasionally been established in the Far East, Asia, Latin America and many other parts of the globe. We wish to bring this tradition here. Historically, symphony orchestras have employed non-Western instruments in compositions based on non-Western traditions. These innovations and deviations from traditions were written primarily by Western composers and performed for a Western audience. MESTO collaborates with distinguished composers and performers from within the specific cultures.
    </string>
    <string name="thirdparty_desc">
        Third Party (stylised Third ≡ Party) is a British progressive house DJ duo consisting of Jonnie Macaire and Harry Bass, based in Essex, London. They are best known for their single "Everyday Of My Life" and the collaboration "Lions in the Wild" with Dutch DJ Martin Garrix. They began their musical career as producers by releasing singles and remixes. The duo met at school and via their mutual interest in music production, they formed Third Party. They pursued further musical education at a music technical college for a year, funding themselves with part-time jobs. They later performed as DJs at local clubs in London while continuing studio production.
    </string>
    <string name="threelau_desc">
        Justin \"3LAU\" Blau, is a mashup artist from Las Vegas, Nevada. His style mainly incorporates top 40\'s with popular electronic dance music. 3LAU began mashing in fall of 2011, shifting from his shoegaze artistry under the alias Glimpse. Blau attended Washington University in St. Louis until the fall of 2012, when he decided to pursue his music career instead of finishing his undergraduate degree in finance. His mashups, most notably \"Girls Who Save the World\" and \"All Night Long,\" have been prominently featured on blogs. Both tracks recently hit the 4th and 32nd slots on Hypem’s top 50 with a total of over 5,000 and 1000 favorites respectively. Citing Deadmau5, Wolfgang Gartner, Avicii and Burial as his key influences, 3LAU dreams of traveling the world to DJ for endless dancing crowds. With his persistence, and passion for music, he\'s sure on his way.
    </string>
    <string name="tvnoise_desc">
        Dutch duo of DJ Producers with obsession for movies, TV shows, gadgets, FX and the sounds of it all, captivated by the weirdest noises. You can always rely on TV Noise to deliver the goods and bring their innovative new sounds to the dancefloor. With previous remixes for and collabs with everyone from Calvin Harris to Martin Garrix, David Guetta, Dillon Francis, Jonas Blue and Christina Aguilera, they have an incredibly high pedigree and continue their excellent work single by single. It is not surprising that 1001tracklist awarded TV Noise with the #61 spot in the Top100 best producers of 2019. Spotify (NL) named TV Noise as one of the Top 25 most influential artists under 25. TV Noise also caught the attention of Billboard, who published that TV Noise have perfected its Dance-Pop Groove. TV Noise played some of the biggest major festivals around the world: Tomorrowland, Ultra Miami, Lollapalooza Berlin, Creamfields UK, Ultra Japan, Sziget Hungary, Balaton Sound, Ultra Korea and Ultra Beijing to name a few. Also they are known for their energetic and fun sets at the best clubs like Omnia Las Vegas, Ushuaia Ibiza, Bone Pattaya, BCM Mallorca, Wet Republic Las Vegas, Sky Garden Bali and a long list of venues around the globe.
    </string>
    <string name="me">Me</string>
    <string name="dimas_fahrul">Dimas Fahrul</string>
    <string name="dfahrul07_gmail_com">dfahrul07@gmail.com</string>
    <string name="dimasfahrul_my_id">dimasfahrul.my.id</string>
    <string name="search_artist">Search artist</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorite_artist">No favorite artist</string>
    <string name="remove_from_favorite">remove from favorite</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="no_artist_found">No artist found</string>
</resources>