...

                is UiState.Success -> {
                    if (uiState.data.isEmpty()) {
                        Box(
                            modifier = Modifier
                                .fillMaxSize()
                                .testTag("empty_state"),
                            contentAlignment = Alignment.Center
                        ) {
                            Text(
                                text = stringResource(R.string.no_artist_found),
                                style = MaterialTheme.typography.headlineMedium
                            )
...
    LazyVerticalGrid(
        state = gridState,
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("lazy_grid")
    ) {
        items(artist, key = { it.id }) { data ->
            ArtistItem(
                name = data.name,
                photo = data.photo,
                modifier = Modifier.clickable {
...
