...
                    onClick = onBackClick,
                    modifier = modifier
                        .padding(start = 16.dp, top = 8.dp)
                        .align(Alignment.TopStart)
                        .clip(CircleShape)
                        .size(40.dp)
                        .testTag("back_home")
                        .background(Color.White)
                ) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.KeyboardArrowLeft,
                        contentDescription = stringResource(R.string.back),
                    )
...
                    modifier = modifier
                        .padding(end = 16.dp, top = 8.dp)
                        .align(Alignment.TopEnd)
                        .clip(CircleShape)
                        .size(40.dp)
                        .background(Color.White)
                        .testTag("favorite_detail_button")
                ) {
                    Icon(
                        imageVector = if (!isFavorite) Icons.Default.FavoriteBorder else Icons.Default.Favorite,
                        contentDescription = if (!isFavorite) stringResource(R.string.add_to_favorite) else stringResource(
                            R.string.remove_from_favorite
                        ),
...
